--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
